// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App App 1`] = `
<div
  id="root"
>
  <root />
</div>
`;

exports[`Storyshots Button rounded 1`] = `
<div
  id="root"
>
  <root>
    <my-button
      rounded="true"
    >
      <button
        class="rounded button"
        style="color: #42b983; border-color: #42b983"
      >
        A Button with rounded edges!
      </button>
    </my-button>
  </root>
</div>
`;

exports[`Storyshots Button square 1`] = `
<div
  id="root"
>
  <root>
    <my-button>
      <button
        class="button"
        style="color: #42b983; border-color: #42b983"
      >
        A Button with square edges!
      </button>
    </my-button>
  </root>
</div>
`;

exports[`Storyshots Welcome Welcome 1`] = `
<div
  id="root"
>
  <root />
</div>
`;
